feat: add inconsistent dates support

--- a/.env.example
+++ b/.env.example
@@ -72,3 +72,10 @@ REACT_APP_OSO_API_KEY=
 REACT_APP_BUILDER_URL=https://builder.gitcoin.co
 REACT_APP_GRANT_EXPLORER=https://explorer.gitcoin.co
 # ---------------------------
+
+
+# ---------------------------
+# Feature flags - Nonessential
+REACT_APP_ALLOW_TESTNETS=true
+REACT_APP_ALLOW_INCONSISTENT_DATES=true
+# ---------------------------
